logging + fix test cases